--- a/css/resume.css
+++ b/css/resume.css
@@ -1,7 +1,7 @@
 /*!
- * Start Bootstrap - Resume v5.0.7 (https://startbootstrap.com/template-overviews/resume)
+ * Start Bootstrap - Pep Developer Portfolio v5.0.7 ()
  * Copyright 2013-2019 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-resume/blob/master/LICENSE)
+ * Licensed under MIT (https://github.com/BlackrockDigital/pep_portfolio/blob/master/LICENSE)
  */
 
 body {
@@ -42,6 +42,10 @@ h3 {
   font-size: 2rem;
 }
 
+ul {
+  list-style-type: none;
+}
+
 p.lead {
   font-size: 1.15rem;
   font-weight: 400;
@@ -54,11 +58,35 @@ p.lead {
   font-size: 1.5rem;
 }
 
-.social-icons a {
+i {
+  color: #fff !important;
+  background-color: #bd5d38;
+}
+
+.social-icons a .fa-github {
+  background-color: #333;
+}
+
+.social-icons a .fa-twitter {
+  background-color: #1da1f2;
+}
+
+.social-icons a .fa-linkedin-in {
+  background-color: #007bb5;
+}
+
+.social-icons a .fa-facebook-f {
+  background-color: #1877f2;
+}
+
+.social-icons a .fa-instagram {
+  background-color: #c32aa3;
+}
+
+.social-icons i {
   display: inline-block;
   height: 3.5rem;
   width: 3.5rem;
-  background-color: #495057;
   color: #fff !important;
   border-radius: 100%;
   text-align: center;
@@ -67,12 +95,14 @@ p.lead {
   margin-right: 1rem;
 }
 
-.social-icons a:last-child {
+.social-icons i:last-child {
   margin-right: 0;
 }
 
-.social-icons a:hover {
-  background-color: #BD5D38;
+.social-icons i:hover {
+  -webkit-transform: translateY(-5px);
+  transform: translateY(-5px);
+  background-color: #868e96;
 }
 
 .dev-icons {
@@ -80,7 +110,7 @@ p.lead {
 }
 
 .dev-icons .list-inline-item i:hover {
-  color: #BD5D38;
+  color: #868e96;
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
@@ -155,16 +185,9 @@ section.resume-section {
   max-width: 75rem;
 }
 
-section.resume-section .resume-item .resume-date {
-  min-width: none;
-}
-
 @media (min-width: 768px) {
   section.resume-section {
     min-height: 100vh;
-  }
-  section.resume-section .resume-item .resume-date {
-    min-width: 18rem;
   }
 }
 
@@ -176,17 +199,58 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #BD5D38 !important;
+  background-color: #bd5d38 !important;
 }
 
 .text-primary {
-  color: #BD5D38 !important;
+  color: #bd5d38 !important;
 }
 
 a {
-  color: #BD5D38;
+  color: #bd5d38;
 }
 
 a:hover, a:focus, a:active {
   color: #824027;
+}
+
+.project-img-container {
+  position: relative;
+  z-index: 0;
+  height: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.photo {
+  position: absolute;
+  z-index: -10;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+  height: auto;
+}
+
+.photo:hover {
+  -webkit-transform: scale(1.3) rotate(3deg);
+  transform: scale(1.3) rotate(3deg);
+}
+
+.separation-title-card {
+  margin-top: 1.25rem;
+}
+
+.separation-title-card:before {
+  content: "";
+  height: 5px;
+  background: rgba(3, 21, 123, 0.719);
+  width: 90px;
+  top: -0.75rem;
+  border-radius: 3px;
 }
