--- a/css/resume.css
+++ b/css/resume.css
@@ -5,7 +5,7 @@
  */
 
 body {
-  font-family: 'Muli', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-family: "Muli", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   padding-top: 54px;
   color: #868e96;
 }
@@ -21,9 +21,8 @@ h1,
 h2,
 h3,
 h4,
-h5,
 h6 {
-  font-family: 'Saira Extra Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   text-transform: uppercase;
   color: #343a40;
@@ -54,13 +53,23 @@ p.lead {
 .subheading {
   text-transform: uppercase;
   font-weight: 500;
-  font-family: 'Saira Extra Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1.5rem;
 }
 
 i {
-  color: #fff !important;
+  color: #fff;
   background-color: #bd5d38;
+}
+
+.fa-check,
+.fa-file-download {
+  color: #bd5d38;
+  background-color: #fff;
+}
+
+.social-icons a {
+  margin: 0 5px;
 }
 
 .social-icons a .fa-github {
@@ -109,8 +118,18 @@ i {
   font-size: 3rem;
 }
 
-.dev-icons .list-inline-item i:hover {
-  color: #868e96;
+.dev-icons .list-inline-item .fa-sass {
+  color: #e83e8c !important;
+  background-color: #fff !important;
+}
+
+.dev-icons .list-inline-item .fa-react {
+  color: #007bff !important;
+  background-color: #fff !important;
+}
+
+.dev-icons .list-inline-item img {
+  width: 4rem;
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
@@ -243,14 +262,18 @@ a:hover, a:focus, a:active {
 }
 
 .separation-title-card {
-  margin-top: 1.25rem;
+  height: 5px;
+  background: #bd5d38;
+  width: 100px;
+  margin: 1.25rem 0;
+  border-radius: 3px;
 }
 
-.separation-title-card:before {
-  content: "";
-  height: 5px;
-  background: rgba(3, 21, 123, 0.719);
-  width: 90px;
-  top: -0.75rem;
-  border-radius: 3px;
+.fa-code {
+  color: #bd5d38 !important;
+  background-color: #fff;
+}
+
+.card-subtitle {
+  color: #868e96;
 }
