--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -16,7 +16,6 @@ h1,
 h2,
 h3,
 h4,
-h5,
 h6 {
   @include heading-font;
   font-weight: 700;
@@ -54,12 +53,19 @@ p.lead {
 }
 
 i {
-  color: $white !important;
+  color: $white;
   background-color: $primary;
+}
+
+.fa-check,
+.fa-file-download {
+  color: $primary;
+  background-color: $white;
 }
 
 .social-icons {
   a {
+    margin: 0 5px;
     .fa-github {
       background-color: $github;
     }
@@ -101,9 +107,18 @@ i {
 
 .dev-icons {
   font-size: 3rem;
-  .list-inline-item i {
-    &:hover {
-      color: $gray-600;
+  .list-inline-item {
+    .fa-sass {
+      color: $pink !important;
+      background-color: $white !important;
+    }
+    .fa-react {
+      color: $blue !important;
+      background-color: $white !important;
+    }
+
+    img {
+      width: 4rem;
     }
   }
 }
