--- a/css/resume.css
+++ b/css/resume.css
@@ -5,7 +5,9 @@
  */
 
 body {
-  font-family: "Muli", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Muli", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol", "Noto Color Emoji";
   padding-top: 54px;
   color: #868e96;
 }
@@ -22,7 +24,9 @@ h2,
 h3,
 h4,
 h6 {
-  font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   text-transform: uppercase;
   color: #343a40;
@@ -53,18 +57,94 @@ p.lead {
 .subheading {
   text-transform: uppercase;
   font-weight: 500;
-  font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1.5rem;
+}
+
+.bg-primary {
+  background-color: skyblue !important;
+}
+
+.nav-link {
+  color: whitesmoke !important;
+}
+
+.nav-link:hover {
+  color: rgb(245, 245, 245) !important;
+}
+
+.primary,
+a {
+  color: skyblue !important;
+}
+
+.secondary {
+  color: sienna;
+}
+
+.third,
+a:hover,
+a:focus,
+a:active,
+h2 {
+  color: steelblue !important;
+}
+
+.nav-link:hover {
+  color: whitesmoke;
+  text-shadow: 1px 1px 4px whitesmoke;
+}
+
+.nav-link:active {
+  text-shadow: 1px 1px 8px white;
+}
+
+.project-img-container {
+  position: relative;
+  z-index: 0;
+  height: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.photo {
+  position: absolute;
+  z-index: -10;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+  height: auto;
+}
+
+.photo:hover {
+  -webkit-transform: scale(1.3) rotate(3deg);
+  transform: scale(1.3) rotate(3deg);
+}
+
+.separation-title-card {
+  height: 5px;
+  background-color: sienna;
+  width: 100px;
+  margin: 1.25rem 0;
+  border-radius: 3px;
 }
 
 i {
   color: #fff;
-  background-color: #bd5d38;
+  background-color: #78a6c9;
 }
 
 .fa-check,
-.fa-file-download {
-  color: #bd5d38;
+.fa-file-pdf {
+  color: #78a6c9;
   background-color: #fff;
 }
 
@@ -139,7 +219,7 @@ i {
 }
 
 #sideNav .navbar-toggler:focus {
-  outline-color: #d48a6e;
+  outline-color: skyblue;
 }
 
 @media (min-width: 992px) {
@@ -166,9 +246,7 @@ i {
     padding: 0.5rem;
   }
   #sideNav .navbar-brand .img-profile {
-    max-width: 10rem;
-    max-height: 10rem;
-    border: 0.5rem solid rgba(255, 255, 255, 0.2);
+    border: 0.5rem solid sienna;
   }
   #sideNav .navbar-collapse {
     display: -webkit-box;
@@ -215,65 +293,4 @@ section.resume-section {
     padding-top: 3rem !important;
     padding-bottom: 3rem !important;
   }
-}
-
-.bg-primary {
-  background-color: #bd5d38 !important;
-}
-
-.text-primary {
-  color: #bd5d38 !important;
-}
-
-a {
-  color: #bd5d38;
-}
-
-a:hover, a:focus, a:active {
-  color: #824027;
-}
-
-.project-img-container {
-  position: relative;
-  z-index: 0;
-  height: 200px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  overflow: hidden;
-}
-
-.photo {
-  position: absolute;
-  z-index: -10;
-  -webkit-transition: -webkit-transform 0.3s;
-  transition: -webkit-transform 0.3s;
-  transition: transform 0.3s;
-  transition: transform 0.3s, -webkit-transform 0.3s;
-  height: auto;
-}
-
-.photo:hover {
-  -webkit-transform: scale(1.3) rotate(3deg);
-  transform: scale(1.3) rotate(3deg);
-}
-
-.separation-title-card {
-  height: 5px;
-  background: #bd5d38;
-  width: 100px;
-  margin: 1.25rem 0;
-  border-radius: 3px;
-}
-
-.fa-code {
-  color: #bd5d38 !important;
-  background-color: #fff;
-}
-
-.card-subtitle {
-  color: #868e96;
 }
