--- a/css/resume.css
+++ b/css/resume.css
@@ -4,6 +4,10 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/pep_portfolio/blob/master/LICENSE)
  */
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Muli", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
@@ -88,14 +92,11 @@ p.visibleText {
   color: whitesmoke !important;
 }
 
-.nav-link:hover {
-  color: whitesmoke;
-  text-shadow: 1px 1px 4px whitesmoke;
+.nav-link:hover,
+.nav-link.active {
+  color: white !important;
+  text-shadow: 1px 1px 4px white;
 }
-
-/* .nav-link:active {
-  text-shadow: 1px 1px 8px white;
-} */
 
 .primary,
 a {
